--- a/bcc0711/src/main/resources/templates/cuenta/editCuenta.html
+++ b/bcc0711/src/main/resources/templates/cuenta/editCuenta.html
@@ -7,9 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-<h1>Editar Cuenta</h1>
+<h1>Editar Cuenta con IBAN: <span th:text="${IBAN}">*</span></h1>
 <form method="post" action="#" th:action="@{/cuenta/editar/{IBAN}/submit(IBAN=${cuentaForm.IBAN})}"  th:object="${cuentaForm}">
-    <label>IBAN: <input type="text" id="IBAN" th:field="*{IBAN}" readonly/> </label><br/>
+    <input type="text" id="IBAN" th:field="*{IBAN}" hidden/> </label>
     <label>Alias: <input type="text" id="alias" th:field="*{alias}" /></label><br/>
     <label>Saldo: <input type="text" id="saldo" th:field="*{saldo}" readonly/></label><br/>
     <input type="submit" value="Enviar"/>
