--- a/bcc0711/src/main/resources/templates/movimiento/movimientoView.html
+++ b/bcc0711/src/main/resources/templates/movimiento/movimientoView.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
 </div>
-<h1>Listado de Movimientos</h1>
+<h1>Listado de Movimientos: <span th:text="${IBAN}">*</span></h1>
 <table class="table table-striped">
     <thead>
     <tr>
