Primero: Añadimos la dependencia Security Segundo: Creamos paquete security y la class SecurityConfig con sus @Beans creando un Rol de User y otro de Admin Tercero: Indicamos el compartamiento a nivel de acceso de las distitnas rutas de los mappings, es decir, que rutas serán accesibles para los usuarios solo, para los admin solo o para el público en general mediante un nuevo @Bean llamado SecurityFilterChain Cuarto: Añadimos en la vista general de empleados dos enlaces (uno para Login y otro para Logout) Quinto: Crear vista para "/accessError" en caso de alguien que quiera acceder a una vista pero que no tiene acceso.

--- a/bcc0901/src/main/resources/templates/listView.html
+++ b/bcc0901/src/main/resources/templates/listView.html
@@ -7,6 +7,10 @@
     <title>Empleado CRUD</title>
 </head>
 <body>
+<p>Iniciar Sesión: <a th:href="@{/login}">Login</a></p>
+
+<p>Desconectarse: <a th:href="@{/logout}">Logout</a></p>
+
 <h1 th:text="${tituloListado}">Título listado</h1>
 <table>
     <thead>
