--- a/bcc0711/src/main/resources/templates/movimiento/error.html
+++ b/bcc0711/src/main/resources/templates/movimiento/error.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <h1>¡¡¡Ha habido un error!!!</h1>
-       <h2>Recuerda que solo puedes ingresar máximo 1.000 Euros y Retirar 300€(-300)</h2>
-       <h2>Además, tienes que ingresar un ID correcto</h2>
+    <h2>Recuerda que solo puedes ingresar máximo 1.000 Euros y Retirar 300€(-300)</h2>
 </div>
 <a th:href="@{/index}">Volver al inicio</a><br/>
 </body>
