Cuarto: Creamos @Component un Bean que implemente la interfaz UserDetailsService Quinto: Creamos repositorio usuario, servicios, controlador y vistas.

--- a/bcc0902/src/main/resources/templates/movimiento/movimientoView.html
+++ b/bcc0902/src/main/resources/templates/movimiento/movimientoView.html
@@ -17,6 +17,9 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/cuenta}"><strong>Listado Cuentas</strong></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/usuario}"><strong>Listado Usuarios</strong></a>
+            </li>
         </ul>
     </div>
 </div>
