--- a/bcc0902/src/main/resources/templates/usuario/error.html
+++ b/bcc0902/src/main/resources/templates/usuario/error.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <h1>¡¡¡Ha habido un error al crear el Usuario!!!</h1>
-    <h2>(Poner algo aquí relacionado con el error que se pudo haber causado)</h2>
+    <h2>El nombre ya existe o la contraseña no tiene mínimo 4 caracteres. Revisa estos datos por favor!</h2>
 </div>
 <a th:href="@{/index}">Volver al inicio</a><br/>
 </body>
