--- a/bcc0902/src/main/resources/templates/cuenta/cuentaView.html
+++ b/bcc0902/src/main/resources/templates/cuenta/cuentaView.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" th:href="@{/index}"><strong>Inicio</strong></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/cuenta}"><strong>Listado Cuentas</strong></a>
+                <a class="nav-link" th:href="@{/cuenta/}"><strong>Listado Cuentas</strong></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/usuario}"><strong>Listado Usuarios</strong></a>
