--- a/bcc0902/src/main/resources/templates/usuario/newUsuarioForm.html
+++ b/bcc0902/src/main/resources/templates/usuario/newUsuarioForm.html
@@ -9,20 +9,20 @@
 </head>
 <body>
 <div class="container">
-    <h1>Nueva Cuenta</h1>
+    <h1>Crear Nuevo Usuario</h1>
     <form action="#" method="post" th:action="@{/usuario/nuevo/submit}" th:object="${usuarioForm}">
         <div class="mb-3">
-            <input hidden id="id" th:field="*{usuario.id}" type="text"/>
+            <input hidden id="id" th:field="*{id}" type="text"/>
             <label>Nombre: </label><br/>
-            <input id="nombre th:field="*{usuario.nombre}" type="text"/>
+            <input id="nombre" th:field="*{nombre}" type="text"/>
         </div>
         <div class="mb-3">
             <label>CONTRASEÑA:</label><br/>
-            <input id="password" th:field="*{usuario.password}" type="text"/>
+            <input id="password" th:field="*{password}" type="text"/>
         </div>
         ROL:<br/>
         <div class="mb-3" th:each="rol : ${T(com.example.app.entity.Rol).values()}">
-            <input name="button1" th:field="*{usuario.rol}" th:text="${rol}" th:value="${rol}"
+            <input name="button1" th:field="*{rol}" th:text="${rol}" th:value="${rol}"
                    type="radio"/>
         </div>
         <input type="submit" value="Enviar"/>
