PRIMER COMMIT CREANDO EJERCICIO 9.3

--- a/bcc0903/src/main/resources/templates/cuenta/cuentaView.html
+++ b/bcc0903/src/main/resources/templates/cuenta/cuentaView.html
@@ -23,8 +23,8 @@
         </ul>
     </div>
 </div>
-<p>Iniciar Sesión: <a th:href="@{/login}">Login</a></p>
-<p>Cerrar Sesión: <a th:href="@{/logout}">Logout</a></p>
+<p>Inicia Sesión: <a th:href="@{/login}">Login</a></p>
+<p>Cierra Sesión: <a th:href="@{/logout}">Logout</a></p>
 <p>Listado de cuentas</p>
 <table class="table table-striped">
     <thead>
