Segundo punto: Agregamos la dependencia de Thymeleaf necesaria para poder gestionar si un usuario está autentificado, su nombre, id, etc... y poder agregar esto a las vistas correspondientes. Además, en estas vistas, también tenemos que añadir en la etiqueta html las referencias correspondientes a thymeleaf. Ahora, añadimos en la vista las condiciones en Thymeleaf para que se cumpla y nos muestre en la vista lo que pide este punto 2.

--- a/bcc0903/src/main/resources/templates/cuenta/cuentaView.html
+++ b/bcc0903/src/main/resources/templates/cuenta/cuentaView.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity"
+      xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -23,8 +24,10 @@
         </ul>
     </div>
 </div>
-
-<p><a class="btn btn-primary btn-block m-4" th:href="@{/signin}">Iniciar Sesión</a>
+<p sec:authorize="!isAuthenticated()">
+    <a class="btn btn-primary btn-block m-4" th:href="@{/signin}">Iniciar Sesión</a></p>
+<p sec:authorize="isAuthenticated()">
+    Usuario conectado: <span sec:authentication="name">*</span>
     <a class="btn btn-primary btn-block m-4" th:href="@{/signout}">Cerrar Sesión</a></p>
 <p>Listado de cuentas</p>
 <table class="table table-striped">
