--- a/bcc0903/src/main/resources/templates/signoutView.html
+++ b/bcc0903/src/main/resources/templates/signoutView.html
@@ -5,7 +5,7 @@
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" rel="stylesheet">
 </head>
 <body>
-<h2>¿Estás seguro de que quieres desconectarte?</h2>
+<h2>¿Estás segur@ de que quieres desconectarte?</h2>
 <form method="post" th:action="@{/logout}"><input class="btn btn-primary btn-block d-flex justify-content-center m-4"
                                                   type="submit" value="CERRAR SESION"/>
 </form>
