--- a/bcc0903/src/main/resources/templates/movimiento/newMovimientoForm.html
+++ b/bcc0903/src/main/resources/templates/movimiento/newMovimientoForm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity"
+      xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -20,7 +21,6 @@
             <label>Importe:</label><br/>
             <input th:field="*{importe}" type="text"/>
         </div>
-
         <input onclick="comprobarSaldo()" type="submit" value="Enviar"/>
     </form>
     <div class="mb-3">
