Creación de enlaces en vista principal de Login y Logout Añadir Atributos password y enumeración ROL a la entidad Usuario Modificar formulario de alta y edición de usuarios con estes nuevos atributos. Creación de Clases de config. de seguridad con los beans AuthenticationManager, PasswordEncoder y SecurityFilterChain

--- a/bcc0904/src/main/resources/templates/producto/productoView.html
+++ b/bcc0904/src/main/resources/templates/producto/productoView.html
@@ -17,6 +17,7 @@
             th:value="${cat.id}" th:text="${cat.nombre}">
     </option>
 </select>
+    Inicio Sesión: <a th:href="@{/login}">Login</a> | Desconectarse: <a th:href="@{/logout}">Logout</a>
 </div>
 <table>
     <thead>
