--- a/bcc0903/src/main/resources/templates/signoutView.html
+++ b/bcc0903/src/main/resources/templates/signoutView.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity"
+      xmlns:th="https://www.thymeleaf.org">
 <head><title>Confirmación de desconexión</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" rel="stylesheet">
 </head>
 <body>
-<h2>¿Estás segur@ de que quieres desconectarte?</h2>
-<form method="post" th:action="@{/logout}"><input class="btn btn-primary btn-block d-flex justify-content-center m-4"
-                                                  type="submit" value="CERRAR SESION"/>
+<h2>Hola <span sec:authentication="name"></span>, ¿estás segur@ de que quieres desconectarte?</h2>
+<form method="post" th:action="@{/logout}">
+    <input class="btn btn-primary btn-block d-flex justify-content-center m-4" type="submit" value="CERRAR SESION"/>
 </form>
 </body>
 </html>
