Terminado! En el alta de usuarios y edición de usuarios, se controla que no se metan 2 nombres de usuarios iguales y nos lance un error avisándonos que hay 2 iguales y que escojamos otro. El rol de User permitirá eliminar valoraciones Se añade un botón de recuérdame a los formularios, que además se hacen personalizados. Se añade una pestaña en el menú de navegación para autoregistrarse a uno mismo como usuario, en este caso no se permite la selección del ROL y tendrá siempre un ROL de USER. Se realizan por último páginas personalizadas de error (error si la página no se encuentra, si la ruta no se encuentra, error si el nombre de usuario ya existe o si un usuario está intentando acceder a una sección de la que no tiene permisos). Por cada error distinto, se muestra una vista (página) distinta.

--- a/bcc0904/src/main/resources/templates/newUser.html
+++ b/bcc0904/src/main/resources/templates/newUser.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>Crear Nuevo Usuario</h1>
-    <form action="#" method="post" th:action="@{/usuario/new/submit}" th:object="${usuarioForm}">
+    <h1>Autocrear Nuevo Usuario</h1>
+    <form action="#" method="post" th:action="@{/registro/nuevo/submit}" th:object="${usuarioForm}">
         <div class="mb-3">
             <input hidden id="id" th:field="*{id}" type="text"/>
             <label>Nombre: </label><br/>
@@ -20,12 +20,10 @@
             <label>CONTRASEÑA:</label><br/>
             <input id="password" th:field="*{password}" type="text"/>
         </div>
-        ROL:<br/>
-        <div class="mb-3" th:each="rol : ${T(com.example.app.entity.Rol).values()}">
-            <input name="button1" th:field="*{rol}" th:text="${rol}" th:value="${rol}"
-                   type="radio"/>
+        <div class="mb-3">
+            <input id="rol" th:field="*{rol}" type="text" hidden/>
         </div>
-        <input type="submit" value="Crear Nuevo Usuario"/>
+        <input type="submit" value="Auto-Crear Nuevo Usuario"/>
     </form>
     <a th:href="@{/producto/}">Volver al Inicio</a><br/>
     <a th:href="@{/producto/new}">Nuevo producto</a><br/>
