--- a/bcc0904/src/main/resources/templates/producto/productoView.html
+++ b/bcc0904/src/main/resources/templates/producto/productoView.html
@@ -33,6 +33,8 @@
                     <li sec:authorize="!isAuthenticated()">
                         <a class="nav-item nav-link active" th:href="@{/login}">Iniciar sesión</a>
                     </li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/registro/nuevo/}">
+                        Registrar Nuevo Usuario</a>
 
                     <!-- menú: nombre-usuario (solo si autenticado) -->
                     <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
